# autotools-practice

./: README.md
emacs-dynamic-module/: README.md  configure.ac  configure.scan
emacs-dynamic-module/src/: Makefile.am  hello-module.c
emacs-lisp/: .gitignore  Makefile.am  README.md  clean.sh  configure.ac  configure.scan
emacs-lisp/lisp/: Makefile.am  hello.el
executable-bin/: .gitignore  Makefile.am  README.md  configure.ac  configure.scan
executable-bin/src/: Makefile.am  main.cc  sub.cc  sub.hh
shared-lib/: README.md  clean.sh  configure.ac  configure.scan
shared-lib/src/: Makefile.am  hello-world.cc  hello-world.hh
static-lib/: README.md  configure.ac
static-lib-pkgconfig/: .gitignore  README.md  configure.ac
static-lib-pkgconfig/src/: Makefile.am  hello-world.cc  libhello-world.pc.in
static-lib/src/: Makefile.am  hello-world.hh
