#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hello-elisp], [0.0.0], [test@example.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AM_PATH_LISPDIR
lispdir=${lispdir}/${PACKAGE}

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 lisp/Makefile])
AC_OUTPUT
